<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="242dp"
        app:srcCompat="@drawable/profilepic" />

    <EditText
        android:id="@+id/input_linkedin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="192dp"
        android:layout_marginStart="13dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/linkedin" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/input_linkedin"
        android:layout_alignTop="@+id/input_linkedin"
        android:layout_marginTop="67dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/first_name" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/first_name"
        android:text="@string/Resume_Upload" />

    <Button
        android:id="@+id/submit_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button6"
        android:layout_below="@+id/last_name"
        android:layout_marginEnd="20dp"
        android:onClick="onSubmit"
        android:text="@string/Submit" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button6"
        android:layout_alignStart="@+id/first_name"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/last_name" />

</RelativeLayout>